--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lenis": "^1.1.6",
     "lucide-react": "^0.416.0",
     "motion": "^12.23.24",
-    "next": "14.2.3",
+    "next": "^14.2.35",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -56,7 +56,7 @@
     "@types/react-dom": "^18",
     "@types/three": "^0.167.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
